deploy-to-ec2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Simple EC2 Instance running backend with Docker

Parameters:
  KeyName:
    Type: String
    Description: Name of an existing EC2 KeyPair to SSH into the instance

Resources:
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: ami-0e35ddab05955cf57 # Ubuntu 22.04 (Mumbai region)
      BlockDeviceMappings:
      - DeviceName: /dev/sda1
        Ebs:
          VolumeSize: 20        # <-- increase this number (default is 8)
          VolumeType: gp3       # or gp2
          DeleteOnTermination: true
      
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo apt update && sudo apt upgrade -y
          sudo apt install docker.io -y
          sudo chmod 666 /var/run/docker.sock

          
          # Retry Docker pull (3GB image may take time)
          for i in {1..5}; do
            docker pull rohitttweb/yt_summrizer_b && break || sleep 30
          done

          # Run the container (auto-restarts)
          docker run -d --restart unless-stopped -p 80:8000 rohitttweb/yt_summrizer_b
      Tags:
        - Key: Name
          Value: yt_summrizer_app

Outputs:
  InstancePublicIP:
    Description: Public IP address of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp

  WebsiteURL:
    Description: Access the backend on port 80
    Value: !Sub "http://${EC2Instance.PublicDnsName}"
